# codex-dispatcher

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE.md  SECURITY.md  config.example.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
codex_dispatcher/: __init__.py  __main__.py  accounts.py  bot.py  check_env.py  codex_runner.py  config.py  diagnostics.py  path_utils.py  purge_codex_session.py  session_manager.py  state.py  telegram_api.py
codex_dispatcher/core/: __init__.py  service.py
codex_dispatcher/sdk/: dispatcher.py
docs/: architecture.md  release_checklist.md  release_notes_v0.1.0.md  release_notes_v0.1.1.md  sdk.md
scripts/: check_env.py
tests/: test_account_runner.py  test_accounts.py  test_bot_routing.py  test_bot_ui.py  test_check_env.py  test_cli.py  test_codex_runner_settings.py  test_dispatcher_service.py  test_path_utils.py  test_purge_codex_session.py  test_sdk.py  test_session_manager.py  test_state.py
tests/fixtures/ci/: smoke_config.json
